--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ethereum-boilerplate",
-  "version": "2.0.0",
+  "name": "waterdao-wallet",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://eth-boilerplate.vercel.app/",
+  "homepage": "https://rh2o.app/",
   "scripts": {
     "format": "prettier . \"**/*.+(js|ts|json)\" --write --ignore-path .gitignore",
     "format:check": "prettier \"**/*.+(js|ts|json)\" --check --ignore-path .gitignore",
